# K-ptain.Ratz

./: .gitignore  README.md
Documentations-cours/: Specs.aux  Specs.dvi  Specs.tex  babel.aux  presentation.aux  presentation.nav  presentation.out  presentation.tex  presentation.toc
K-ptain/: Cargo.toml
Ratz/: Cargo.toml
kptain/: Cargo.toml
kptain/gui/: auth.php  index.html  index.php  kptain.conf  login.php  style.css
kptain/gui/central/: dashboard.php  home.php  logout.php  profile.php  style.css
kptain/src/: datasave.db  main.rs
ratz/: Cargo.toml
ratz/src/: main.rs  server.rs
